// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`attrs option works correctly 1`] = `
<DocumentFragment>
  <button
    type="button"
  >
    Click
  </button>
</DocumentFragment>
`;

exports[`chakra elements - renders with style props 1`] = `
<DocumentFragment>
  <div
    class="css-y1gt6f"
  >
    Welcome
  </div>
</DocumentFragment>
`;

exports[`chakra function - renders currently 2`] = `
<DocumentFragment>
  <button
    class="css-gnqum9"
  >
    Click me
  </button>
</DocumentFragment>
`;

exports[`it allows pass through props 1`] = `
<DocumentFragment>
  <img
    data-testid="img"
    width="60px"
  />
</DocumentFragment>
`;

exports[`it renders component using theme key 1`] = `
<DocumentFragment>
  <span>
    Badge
  </span>
</DocumentFragment>
`;

exports[`it renders with base style 1`] = `
<DocumentFragment>
  <div
    class="css-pfs33m"
  >
    Hey!
  </div>
</DocumentFragment>
`;
